--- a/web-container/src/main/webapp/ProfilePage.html
+++ b/web-container/src/main/webapp/ProfilePage.html
@@ -24,8 +24,8 @@
 <div id="wrapper">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <!-- Brand and toggle get grouped for better mobile display -->
+<!--    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
                 <span class="sr-only">Toggle navigation</span>
@@ -35,7 +35,7 @@
             </button>
             <a class="navbar-brand" href="index.html">Scopito</a>
         </div>
-        <!-- Top Menu Items -->
+        <!-- Top Menu Items
         <ul class="nav navbar-right top-nav">
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
@@ -136,7 +136,7 @@
                 </ul>
             </li>
         </ul>
-        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
+        <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav side-nav" style="background: #12b2c0">
                 <li>
@@ -170,8 +170,8 @@
 
             </ul>
         </div>
-        <!-- /.navbar-collapse -->
-    </nav>
+        <!-- /.navbar-collapse
+    </nav> -->
     <div ng-repeat="item in items track by item.id">    </div>
     <div id="page-wrapper">
 
@@ -194,7 +194,7 @@
                 <div class="col-lg-4 text-center">
                     <div class=" panel-default">
                         <div class="panel-body">
-                            <div> <img src="images/droneComp1.jpg" class="img-rounded" style="width: 100%" /></div>
+                            <div> <img src="images/droneComp3.jpg" class="img-rounded" style="width: 75%" /></div>
                         </div>
                     </div>
                 </div>
@@ -285,9 +285,10 @@
                 <div class="col-lg-4 text-center">
                     <div class="panel-default">
                         <div class="panel-body">
-                         <a href="images/droneComp3.jpg" data-title="Test Drone Picture" data-lightbox="Gallery">   <img src="images/droneComp3.jpg" class="img-thumbnail" style="width: 50%"> </img></a>
+                         <a href="images/droneComp2.jpg" data-title="Test Drone Picture" data-lightbox="Gallery">   <img src="images/droneComp2.jpg" class="img-thumbnail" style="width: 50%"> </img></a>
                             <a href="images/droneComp1.jpg" data-title="Test Drone Picture" data-lightbox="Gallery"> </a>
-                            <a href="images/droneComp2.jpg" data-title="Test Drone Picture" data-lightbox="Gallery">  </a>
+                            <a href="images/droneComp3.jpg" data-title="Test Drone Picture" data-lightbox="Gallery">  </a>
+                            <a href="images/droneComp4.jpg" data-title="Test Drone Picture" data-lightbox="Gallery">  </a>
                         </div>
                     </div>
                 </div>
