--- a/web-container/src/main/webapp/index.html
+++ b/web-container/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 </head>
 <body ng-app="scopito.marketplace" ng-strict-di="true">
 <div id="wrapper">
-    <div ng-view> </div>
+
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -167,383 +167,12 @@
         <!-- /.navbar-collapse -->
     </nav>
 
-    <div id="page-wrapper">
 
-        <div class="container-fluid">
-
-            <!-- Page Heading -->
-            <div class="row">
-                <div class="col-lg-12" style="padding-bottom: 2%">
-
-                    <div class="col-lg-12 coverimageParagraph"> <img src="images/outdoors.jpeg" style="width: 100%"> </img>
-                    </div>
-
-                </div>
-            </div>
-            <!-- /.row -->
-
-
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    <div class=" panel-default">
-                        <div class="panel-body">
-                            <div> <img src="images/companyLogo.png" /></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center ">
-                    <div class=" panel-default companyDivHeaderborder companyInfoTextPadding">
-
-                        <div> Company_Info </div>
-                        <div> Country </div>
-                        <div> Region </div>
-                        <div> Price </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel-default companyDivHeaderborder companyInfoTextPadding">
-                        <div> Inc. </div>
-                        <div> Denmark </div>
-                        <div> East Jutland </div>
-                        <div> 500$ </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel-default companyDivHeaderborder companyInfoTextPadding">
-                        <div> Favorite </div>
-                        <div> Rating </div>
-                        <div> Certiefied </div>
-                        <div> Contact </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel-default companyDivHeaderborder companyInfoTextPadding">
-                        <div> Yes </div>
-                        <div> 9.07 </div>
-                        <div> Yes </div>
-                        <div> mymail@email.com </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-2 text-center">
-                    <div class=" panel-default companyDivServiceinfoPadding">
-                        <h4>
-                            Services
-                        </h4>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class=" panel-default companyDivServiceinfoPadding">
-                        <h4>
-                            <br/>
-                        </h4>
-                        <div>HD_Images </div>
-                        <div>Thermal_Imaging </div>
-                        <div>Analysis </div>
-                        <div>3D_Imaging </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class=" panel-default companyDivServiceinfoPadding">
-                        <h4>
-                            Delivery Methods
-                        </h4>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                        <div> <input type="checkbox" name="vehicle" value="Bike"></div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel-default companyDivServiceinfoPadding">
-                        <h4>
-                            <br/>
-                        </h4>
-                        <div>HD_Images </div>
-                        <div>Thermal_Imaging </div>
-                        <div>Analysis </div>
-                        <div>3D_Imaging </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <div class="panel-default">
-                        <div class="panel-body">
-                            <img src="images/companyLogo.png" style="width: 50%"> </img>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-9 text-center">
-                    <div class="panel-default">
-                        <div class="panel-body">
-                            <textarea cols=100% rows=20% id="companyInformation"> </textarea>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="panel-default">
-                        <div class="panel-body" >
-                            <img src="images/companyLogo.png" style="width: 100%"> </img>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-4 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-4
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-4
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-4
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-2
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-1 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-1
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-8 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-8
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-4
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-            <div class="row">
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-6
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 text-center">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            .col-lg-3
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- /.row -->
-
-        </div>
-        <!-- /.container-fluid -->
-
-    </div>
-        <!-- ng-view end -->
 
 
     <!-- /#page-wrapper -->
 </div>
+<div ng-view> </div>
 <!-- /#wrapper -->
 
 <!-- jQuery -->
@@ -557,6 +186,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.min.js"></script>
-<script src="app.js"></script>
+<script src="app2-demo.js"></script>
 </body>
 </html>
