--- a/web-container/src/main/webapp/index.html
+++ b/web-container/src/main/webapp/index.html
@@ -41,5 +41,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.min.js"></script>
 <script src="js/app2.js"></script>
+<script src="js/thoms.js"></script>
 </body>
 </html>
