--- a/web-container/src/main/webapp/index.html
+++ b/web-container/src/main/webapp/index.html
@@ -12,13 +12,26 @@
     <!-- Custom CSS -->
     <link href="css/sb-admin.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
+    <!-- Bootstrap Toggle -->
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <!-- Angular Material
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.css" rel="stylesheet" type="text/css"> -->
+    <!-- Angular Lightbox -->
+    <link href="angular-lightbox-master/angular-lightbox/angular-lightbox.css" type="text/css" rel="stylesheet">
+    <!-- Project CSS -->
     <link type="text/css" href="css/myStylesheet.css" rel="stylesheet">
-</head>
-<body ng-app="scopito.marketplace" ng-strict-di="true">
+    <link rel="stylesheet" href="css/csaba-style.css" type="text/css">
 
+
+
+
+</head>
+<body ng-app="scopito.marketplace"> <!-- ng-strict-di="true" -->
+
+<!-- !!!!!!!!!!!!!!!!!!!! Important: revert ng-include to navigation.html before committing !!!!!!!!!!! -->
 <!-- Nav -->
 <div id="wrapper">
-<div ng-include="'templates/navigation.html'"></div>
+<div ng-include="'templates/navigation2.html'"></div>
     <!-- Content -->
     <div ng-view></div>
     <!-- /Content -->
@@ -26,20 +39,37 @@
 
 
 <!-- /Nav -->
-
-
-
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 
-
-
+<!-- AngularJS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-route.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-animate.js"></script>
+<!--
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-messages/1.5.5/angular-messages.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
+-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.3/ui-bootstrap-tpls.min.js"></script>
+
+<!-- Angular Lightbox -->
+<script src="angular-lightbox-master/angular-lightbox/angular-lightbox.js"></script>
+
+<!-- Angular Modal Service -->
+<script src="js/angular-modal-service.js"></script>
+
 <script src="js/app2.js"></script>
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+
 </body>
 </html>
