Thomas - added footer

--- a/web-container/src/main/webapp/index.html
+++ b/web-container/src/main/webapp/index.html
@@ -32,9 +32,11 @@
 <!-- Nav -->
 <div id="wrapper">
 <div ng-include="'templates/navigation2.html'"></div>
+
     <!-- Content -->
     <div ng-view></div>
     <!-- /Content -->
+    <div ng-include="'templates/footer.html'"></div>
 </div>
 
 
